--- a/templates/login.html
+++ b/templates/login.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet"
+    type="text/css"
+    href="/static/style.css"
+    media="screen"/>
+    <title>Login</title>
 </head>
 <body>
     <div id="loginForm">
-        <form id="loginCredentials" action="/login" method="post">
+        <form id="loginCredentials" method="post">
             <label for="username">Username: </label>
             <input type="text" id="username" name="userName" placeholder="JohnDoe">
             <label for="password">Password: </label>
             <input type="text" id="password" name="userPassword" placeholder="GoodPassword123">
             <input type="submit" value="Submit">
         </form>
-
-
     </div>
-
-  
 </body>
 </html>
