--- a/static/style.css
+++ b/static/style.css
@@ -7,3 +7,113 @@ body{
     margin: 0 auto;
     margin-top: 250px;
 }
+
+/*Navbar Styles*/
+#navbar {
+    background-color: #79bac1;
+    height: 2em;
+    padding-top: 15px;
+}
+
+/*Move navbar elements to the left, right, or keep them in the center*/
+.leftNav {
+    margin-right: auto;
+    margin-left: 15px;
+
+}
+
+.rightNav {
+    margin-left: auto;
+    margin-right: 15px;
+}
+
+.midNavLeft{
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+    margin-right: 15px;
+}
+
+.midNavRight {
+    /*margin-right: auto;*/
+    margin-left: 15px;
+
+}
+
+/* Dropdown Button */
+.dropbtn {
+    color: black;
+    font-size: 16px;
+    border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdownContent {
+    display: none;
+    position: absolute;
+    background-color: green;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/*Options inside the dropdown */
+.dropdownContent li{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change the color of dropdown links on hover */
+.dropdownContent li:hover {background-color: red;}
+
+/*Show the dropdown menu on hover */
+.dropdown:hover .dropdownContent {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: purple;
+}
+
+/*Navigation Bar Styling*/
+.navContainer {
+    display: flex;
+}
+
+/*Adds responsiveness to all li in the navbar*/
+.navContainer > li {
+    flex: 1
+}
+
+/*Creates two rows if screen width is too small to display all nav elements*/
+@media all and (max-width: 600px) {  
+    
+    .navContainer {  
+      flex-wrap: wrap;  
+    }  
+      
+    .navContainer > li {  
+      flex-basis: 50%;  
+    }
+  
+  }
+
+  /*Changes navbar from horizonatal to vertical on very small screens*/
+  @media all and (max-width: 400px) {
+      .navContainer > li {
+          flex-basis: 100%
+      } 
+      .dropdown {
+          order: 1;
+      }
+      
+  }
+  
