--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,25 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet"
-    type="text/css"
-    href="style.css"
-    media="screen"/>
-</head>
-<body>
-    <!--Navigation Bar - Displayed at the top of the page-->
-    <div id="navbar">
-        <ul id="navButtons">
-            <li><a href="">Home</a></li>
-            <li><a href="">Add Program</a></li>
-            <li><a href="">Settings</a></li>
-            <li><a href="">Profile</a></li>
+{% extends 'layout.html' %}
+{% block title %}Home{% endblock %}
+{% block settings %}
+    <div class="dropbtn">Select</div>
+    <div class="dropdownContent">
+        <ul>
+            <li class="btn">Move</li>
+            <li class="btn">Rename</li>
+            <li class="btn">Delete</li>
         </ul>
-
     </div>
 
-</body>
-</html>
+{% endblock %}
+
+{% block main %}
+    
+{% endblock %}
