--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="/static/reset.css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="/static/style.css" media="screen"/>
+    
 </head>
 <body>
+    <!--Navigation Bar - Displayed at the top of the page-->
+    <div id="navbar">
     
+        <div class="navContainer" id="navButtons">
+            <a href="/" class="home leftNav">Home</a>
+            <a href="/add" class="add midNavLeft">Add</a>
+            <a href="" class="dropdown midNavRight">{% block settings %}{% endblock %}</a>
+            <a href="/profile" class="profile rightNav">Profile</a>
+        </div>
+   
+    </div>
+    <div class="container">
+        {% block main %}{% endblock %}
+    </div>
+
+    <footer></footer>
+    
+
+</body>
+</html>
+
 </body>
 </html>
